Bug 508716 - Memory usage information mixed on applications page
Summary: Memory usage information mixed on applications page
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.3.6
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-25 13:58 UTC by Yavuz Mert
Modified: 2025-09-09 13:53 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Konsole 25.12.0
Sentry Crash Report:


Attachments
screenshots for both pages (107.31 KB, image/png)
2025-08-25 13:58 UTC, Yavuz Mert
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yavuz Mert 2025-08-25 13:58:00 UTC
Created attachment 184434 [details]
screenshots for both pages

SUMMARY
plasma-systemmonitor processes page display correct -at least meaningful- memory values. But memory column values on "Applications" table are mixed (shuffled).
In my case memory usage of different "kdevelop" instances are nicely added up, but displayed as memory usage of "konsole" application (where 4.1 GiB is ridiculous for konsole)
See the attached screenshot please.
It seems like case-sensitive vs case-insensitive sorting error on applications table.

STEPS TO REPRODUCE
1. Run kdeconnect, kdevelop and konsole at the same time
2. Open plasma-systemmonitor
3. Observe memory usage of these apps both on "Processes" page and "Applications" page.
4. Their memory values are mixed
Comment 1 Bug Janitor Service 2025-08-25 14:33:45 UTC
Thank you for the bug report!

However Plasma 6.3.6 no longer receives updates or maintenance from KDE; active versions are 6.4 or newer. Please upgrade to an active version as soon as your distribution makes it available to you. Plasma is a fast-moving project, and bugs in one version are often fixed in the next one.

If you need help with Plasma 6.3.6, please contact your distribution, who bears the responsibility of providing help for older releases that are no longer receiving updates from KDE.

If you can reproduce the issue after upgrading to an active version, feel free to re-open this bug report.
Comment 2 Yavuz Mert 2025-08-25 19:16:08 UTC
Well, you are right, I had seen the bug on my ubuntu 25.04. I booted my opensuse tumbleweed with plasma 6.4.x and could not reproduce it.
Sorry for the false alarm.
BR
Comment 3 Christoph Cullmann 2025-09-09 07:54:07 UTC
Git commit 78b2f295fb6b3968ba979331396507e6ba57e366 by Christoph Cullmann, on behalf of Arjen Hiemstra.
Committed on 09/09/2025 at 07:36.
Pushed by cullmann into branch 'master'.

Inherit parent's app ID when creating a new cgroup for tabs

When creating a cgroup for a tab, we would use a hardcoded string as
cgroup name that included `org.kde.konsole` as app ID. This leads to
tabs incorrectly being attributed to Konsole in System Monitor's
application page, even if the tab is actually embedded in a different
application such as Kate.

Instead of hardcoding the app ID, use the application's desktop file
name, so that if we lookup the app ID from a cgroup name, we get back to
the original application instead of Konsole.

M  +5    -1    src/ProcessInfo.cpp

https://invent.kde.org/utilities/konsole/-/commit/78b2f295fb6b3968ba979331396507e6ba57e366